--- a/frontend/src/app/notification/components/notification.html
+++ b/frontend/src/app/notification/components/notification.html
@@ -2,8 +2,10 @@
     <h2>Notifications</h2>
     <div class="notifications-list">
         <div *ngIf="notification && notification.length > 0; else noNotifications">
-            <div class="notification-item" *ngFor="let notif of notification; let i = index">
-                <div class="notification-content" (click)="goTo(i)">
+            <div class="notification-item" *ngFor="let notif of notification; let i = index" (click)="goTo(i)"
+                [class.isRead]="notif.isRead" [class.unread]="!notif.isRead">
+                <div class="notification-indicator" *ngIf="!notif.isRead"></div>
+                <div class="notification-content">
                     <p>{{ notif.content }}</p>
                     <small>{{ notif.time | date:'short' }}</small>
                 </div>
