--- a/frontend/src/app/post/components/post-card/post-card.html
+++ b/frontend/src/app/post/components/post-card/post-card.html
@@ -12,7 +12,7 @@
                 <div class="username-row">
                     <span class="post-username">@{{ post.userName }}</span>
                 </div>
-                <span class="post-timestamp">{{ post.timestamp | date:'short' }}</span>
+                <span class="post-createdAt">{{ post.createdAt | date: 'short' }}</span>
             </div>
         </div>
     </div>
@@ -78,7 +78,7 @@
                 <!-- Instant Comments (Just Posted) -->
                 <div *ngFor="let instantComment of instantComments" class="comment-card new-comment">
                     <div class="comment-avatar" (click)="moveToProfile(instantComment.userUuid)">
-                            <img [src]="'http://localhost:8080/' + instantComment.image" class="avatar-placeholder" alt="">
+                        <img [src]="'http://localhost:8080/' + instantComment.image" class="avatar-placeholder" alt="">
                     </div>
                     <div class="comment-content">
                         <div class="comment-header">
@@ -95,7 +95,7 @@
                 <!-- Existing Comments -->
                 <div *ngFor="let c of comment?.comments" class="comment-card">
                     <div class="comment-avatar" (click)="moveToProfile(c.userUuid)">
-                            <img [src]="'http://localhost:8080/' + c?.imageProfile" class="avatar-placeholder" alt="">
+                        <img [src]="'http://localhost:8080/' + c?.imageProfile" class="avatar-placeholder" alt="">
                     </div>
                     <div class="comment-content">
                         <div class="comment-header">
@@ -103,7 +103,7 @@
                         </div>
                         <p class="comment-text">{{ c?.comment }}</p>
                         <div class="comment-meta">
-                            <span class="comment-time">{{ c?.timesTamp | date:'short' }}</span>
+                            <span class="comment-time">{{ c?.createdAt | date:'short' }}</span>
                         </div>
                     </div>
                 </div>
